WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249219
WebGL tests are slow in debug due to sync IPC reply logging even when disabled
https://bugs.webkit.org/show_bug.cgi?id=249219
Summary
WebGL tests are slow in debug due to sync IPC reply logging even when disabled
Kimmo Kinnunen
Reported
2022-12-13 05:51:14 PST
WebGL tests are slow in debug due to sync IPC reply logging even when disabled
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-13 05:51:27 PST
<
rdar://problem/103298421
>
Kimmo Kinnunen
Comment 2
2022-12-13 05:58:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7545
EWS
Comment 3
2022-12-14 02:47:47 PST
Committed
257842@main
(8f7373eda214): <
https://commits.webkit.org/257842@main
> Reviewed commits have been landed. Closing PR #7545 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug