WebGL tests are slow in debug due to sync IPC reply logging even when disabled https://bugs.webkit.org/show_bug.cgi?id=249219 rdar://problem/103298421

Reviewed by Cameron McCormack.

When replying to a IPC sync message, do not construct log TextStream if the
logging channel is disabled.

Speeds up Debug build webgl/2.0.y/conformance2/state/gl-object-get-calls.html
with  WebGL GPUP. This test does a lot of sync messages.

* Source/WebKit/Platform/IPC/HandleMessage.h:
(IPC::logReply):

Canonical link: https://commits.webkit.org/257842@main